# contextdb

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  dev_config.yaml  docker-compose.yml  go.mod  go.sum  package-lock.json  package.json  proposed-features.md  test_contextdb.py  test_results.json
.github/workflows/: ci.yml  docs.yml  pages.yml
api/graphql/: schema.graphql
bench/: fitness_test.go  score_bench_test.go
bench/adversarial/: poisoning_test.go  temporal_test.go
bench/longmemeval/: dataset.go  real_dataset.go  runner.go  runner_test.go
bench/mteb/: runner.go  runner_test.go
cmd/contextdb/: main.go  main_test.go
docs/: _config.yml  benchmarks.md  examples.md  feature-matrix.md  index.md  playground.md  quick-start.md  release-health.md
docs/.vitepress/: config.ts
docs/_includes/: head_custom.html  header_custom.html
docs/api/: dsl.md  go-sdk.md  graphql.md  grpc.md  index.md  python-sdk.md  rest.md  schemas.md  typescript-sdk.md
docs/architecture/: background-workers.md  embedding.md  index.md  overview.md  read-path.md  write-path.md
docs/concepts/: ai-verification-and-ranking.md  conflict-detection.md  credibility.md  data-modeling.md  epistemics.md  index.md  memory-types.md  namespaces.md  rbac.md  scoring.md  sm2.md  temporal.md
docs/deployment/: backup-runbook.md  docker.md  embedded.md  index.md  kubernetes.md  norn.md  (+6 more)
sdk/python/: pyproject.toml
sdk/python/contextdb/: __init__.py  async_client.py  client.py  types.py
sdk/python/tests/: test_client.py
testdata/: corpus.go  fixtures.go  fixtures_test.go
(+352 files in other folders)
