[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextdb"
version = "0.1.0"
description = "Python SDK for contextdb — temporal graph-vector database"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-httpserver>=1",
]
